# composerV

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.en.html  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
composerv/: __init__.py  devtools.py  models.py
composerv/analyze/: __init__.py  aesthetics.py  base.py  clip_video.py  orchestrator.py
composerv/audio/: __init__.py  keyline.py  transcribe.py  vad.py
composerv/clarity/: __init__.py  actions.py  analyze.py  catalog.py  ingest.py  keyframes.py  sampling.py  summarize.py  understand.py
composerv/cli/: main.py
composerv/confirm/: apply.py  enroll_glue.py  form.py  server.py
composerv/director/: __init__.py  montage.py  plan.py  prompt.py  (+1 more)
docs/: aesthetics-design.md  aesthetics-plan.md  apple-native-models.md  music-library.md  preview-spike.md  vlm-capabilities-and-director-plan.md
swift/: aesthetics.swift
tests/: conftest.py  test_aesthetics.py  test_analyze.py  test_angles.py  test_audio_highlights.py  test_beatfill.py  test_brief.py  test_clarity_actions.py  test_clarity_catalog.py  test_clarity_ingest.py  test_clarity_keyframes.py  test_clarity_sampling.py  test_clarity_summarize.py  test_clarity_understand.py  test_claude_backend_routing.py  test_claude_cli_backend.py  test_cli_clarity.py  test_cli_confirm.py  test_cli_music_index.py  test_clip_video.py  test_compile.py  test_confirm_apply.py  test_confirm_enroll.py  test_confirm_form.py  test_confirm_server.py  test_default_db.py  test_devtools_demo.py  test_director.py  test_director_montage_music.py  test_director_music_intent.py  test_export.py  test_faces_cluster.py  test_faces_enroll.py  test_faces_review.py  test_fcpxml_emitter.py  test_frames.py  test_frames_window.py  test_keyline.py  test_models_music.py  test_models_music_features.py  (+30 more)
(+54 files in other folders)
